--- a/kustomize/base/deployment.yaml
+++ b/kustomize/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: litellm
-        image: ghcr.io/berriai/litellm
+        image: agentic-layer/model-router-litellm
         args:
           - "--port"
           - "4000"
